Fixed chat
Added custom scrollbar that scrolls to bottom when a message is sent.
Fixed so that you cant move when chatting.

--- a/client/source.css
+++ b/client/source.css
@@ -2,28 +2,39 @@
   bottom: 0;
   left: 0;
   width: 25%;
-  max-width: 500px;
+  max-width: 400px;
   min-width: 300px;
-  background: #333333;
-  opacity: 0.5;
-  height: auto;
-  position: absolute;
+  background: black;
+  position: fixed;
   z-index: 200;
+  opacity: 0.8;
 }
 #chatmessages {
-  position: absolute;
-  overflow: none;
+  bottom: 26px;
+  left:0;
+  overflow: hidden;
+  max-height: 100px;
 }
 #messagelist {
-  color: #eee;
+  color: #fff;
+  font-size: 15px;
   list-style-type: none;
+  margin:0px;
+  padding-left:10px;
 }
 #chat-form {
   bottom: 0;
   width: 100%;
   height: auto;
-  margin: 1px;
-  position: fixed;
+  margin: 0px;
+  color: white;
+}
+#chat-bar{
+  width:100%;
+  padding:10px;
+  margin:0px;
+  border:0px;
+  background-color:black;
 }
 #container {
   position: relative;
